--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://129.154.63.93:3306/eumpa
+spring.datasource.username=root
+spring.datasource.password=toor
 
+spring.jpa.hibernate.ddl-auto=update  
+spring.jpa.properties.hibernate.format_sql=true 
+spring.jpa.show-sql=true 
+spring.jpa.open-in-view=false
