Deploy : Github Action Script 파일 작성

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -85,6 +85,9 @@ jobs:
             host: ${{ secrets.SERVER_HOST }}
             user: ${{ secrets.SSH_USER }}
             key: ${{ secrets.SSH_PRIVATE_KEY }}
+            first_ssh: |
+              cd /home/${{ secrets.SSH_USER }}/server/
+              [ -e *-SNAPSHOT.jar ] && rm -f *-SNAPSHOT.jar && echo 'delete success'
             scp: |
               ./deploy/*-SNAPSHOT.jar => /home/${{ secrets.SSH_USER }}/server/
             last_ssh: |
